syntax = "proto3";
package hello;

//service can be executed
service Say {
  // function can be call in server.rs
  // rpc Send (SayRequest) returns (SayResponse);
  // rpc SendStream(SayRequest) returns (stream SayResponse);
  // taking a stream as  response
  rpc ReceiveStream(stream SayRequest) returns (SayResponse);
}

message SayRequest {
  string name = 1;
}

message SayResponse {
  string message = 1;
}
